# Supermarket-Sales-Forecaster

./: .gitignore  LICENSE  README.md  pyproject.toml  sales_forcast.ipynb
