[project]
name = "supermarket-sales-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "kaggle>=1.8.2",
    "kagglehub>=0.3.13",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn",
    "matplotlib",
]
